P4ADEV-4407-expore-api-to-download-sendFiles